--- a/src/main/resources/assets/automodpack/lang/pl_pl.json
+++ b/src/main/resources/assets/automodpack/lang/pl_pl.json
@@ -39,5 +39,7 @@
   "gui.automodpack.screen.danger.secDescription": "To może być ryzykowne! Nie pobieraj, jeśli nie ufasz administratorom serwera!",
   "gui.automodpack.screen.danger.button.accept": "Pobierz",
   "gui.automodpack.screen.danger.button.dontshowagain": "Pobierz i nie pokazuj tego ponownie",
-  "gui.automodpack.screen.danger.button.cancel": "Nie pobieraj"
+  "gui.automodpack.screen.danger.button.cancel": "Nie pobieraj",
+
+  "gui.automodpack.button.back": "Wróć"
 }
